chore: update deps